Fix Bug in price Truncation

--- a/web/style.css
+++ b/web/style.css
@@ -51,7 +51,7 @@ body{
 
 .history_container{
     height: 35%;
-    overflow-y:auto;
+    overflow-y:scroll;
     border: 4px solid #247ba0;
     list-style-type: none;
     padding: 0;
